Make destinationPlatform an editable picklist. Fixes #6557

--- a/templates/ci/xcode.yml
+++ b/templates/ci/xcode.yml
@@ -33,7 +33,7 @@ steps:
     sdk: '$(testSdk)'
     xcodeVersion: '$(xcodeVersion)'
     signingOption: 'default'
-    destinationPlatformOption: 'iOS'
+    destinationPlatform: 'iOS'
     publishJUnitResults: 'true'
   enabled: false
 
